Addition: End-to-end test

--- a/web/index.html
+++ b/web/index.html
@@ -94,6 +94,7 @@
                     <div id="AC" class="outline-1 outline-solid flex"><span>AC: </span><span class="val"></span></div>
                 </div>
                 <div>
+                    <button id="prev" class="outline-solid outline-2 rounded-xl">Prev</button>
                     <button id="next" class="outline-solid outline-2 rounded-xl">Next</button>
                 </div>
             </div>
